[gd_scene load_steps=3 format=3 uid="uid://83o7d5xjb155"]

[ext_resource type="Theme" uid="uid://dp58tqgvn7o0e" path="res://ui/theme.tres" id="1_af0sm"]
[ext_resource type="Script" path="res://ui/settings_dialog/settings.gd" id="2_pxjcq"]

[node name="SettingsDialog" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.5
offset_right = 2.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_af0sm")
script = ExtResource("2_pxjcq")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Button" type="Button" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme = ExtResource("1_af0sm")
theme_override_font_sizes/font_size = 100
text = "<"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="LabelSettings" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Settings"

[node name="LabelMusic" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Music"

[node name="SliderMusic" type="HSlider" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
value = 100.0

[node name="Separator" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="LabelSounds" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Sounds"

[node name="SliderSounds" type="HSlider" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
value = 100.0

[connection signal="pressed" from="MarginContainer/HBoxContainer/Button" to="." method="_on_back_button_pressed"]
[connection signal="value_changed" from="MarginContainer/HBoxContainer/VBoxContainer/SliderMusic" to="." method="_on_slider_music_value_changed"]
[connection signal="value_changed" from="MarginContainer/HBoxContainer/VBoxContainer/SliderSounds" to="." method="_on_slider_sounds_value_changed"]
